# pylogconfig

./: .bumpversion.cfg  README.md  pyproject.toml
tests/: test_pylogconfig.py
