[tool.poetry]
name = "pylogconfig"
version = "0.1.0-dev"
description = "Easily configure Python logger with configuration files."
authors = ["RemyLau <remylau961@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
bump2version = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipdb = "^0.13.9"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
